--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://mahbubilgofur.github.io/novan.github.io/",
   "name": "3react",
   "version": "0.1.0",
   "private": true,
